# pi-pxe-server

./: .gitignore  README.md  pyproject.toml
ansible/: inventory.yml  setup-pxe-server.yml
ansible/group_vars/: all.yml.example
scripts/: bootstrap.sh  build-pi-installer.sh  common.py  configure.py  firstboot.sh  pi-setup.sh  prepare-sd.sh  prepare_pi_target.py  prepare_pxe_server.py  prepare_sd.py  pxe-firstboot.service
templates/: all.yml.tpl  autoinstall-meta-data  autoinstall-user-data.tpl  cloud-init-user-data.tpl  dnsmasq.conf.tpl  grub-arm64.cfg.tpl  grub-x86_64.cfg.tpl  inventory.yml.tpl  nginx-pxe.conf  pi-cmdline.txt.tpl  pi-config.txt.tpl
