[project]
name = "node-bootstrap"
version = "0.2.0"
description = "From bare metal to Ubuntu: PXE boot for x86, SD card prep for Raspberry Pi"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
prepare-pxe-server = "scripts.prepare_pxe_server:app"
prepare-pi-target = "scripts.prepare_pi_target:app"
